fix(mpc): fix alignment of sidebar links

--- a/1-management-panel/client/src/Components/Dash-board.css
+++ b/1-management-panel/client/src/Components/Dash-board.css
@@ -51,7 +51,7 @@ main {
     display: flex;
     color: #fff;
     padding: 1px 15px;
-    margin: 20px 0px;
+    margin: 16px 0px;
     gap: 15px;
     transition: all 0.5s;
 }
